--- a/.sbrew/index.yaml
+++ b/.sbrew/index.yaml
@@ -1,6 +1,6 @@
 ﻿FormatVersion: 7
-BeatmapId: 4128302
-BeatmapName: "Fazioli"
+BeatmapId: 4101497
+BeatmapName: "Stradivarius"
 Assemblies:
 Layers:
   - "2b231b7a463b430d9c943ea2a888a9ed"
